--- a/iOS/AgoraEntScenarios/Scenes/SBG/sbgResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SBG/sbgResource.bundle/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "sbg_song_background" = "歌词背景";
 "sbg_more_actions" = "更多操作";
 "sbg_create" = "创建";
-"sbg_create_tips1" = "欢迎来到声网在线K歌房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！";
+"sbg_create_tips1" = "欢迎来到声网嗨歌抢唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！";
 "sbg_create_tips2" = "本应用为测试产品，请勿商用";
 "sbg_create_tips3" = "单次K歌最长20分钟，每个房间最多8人";
 "sbg_room_before_speaker" = "点击空麦位，上麦后可点歌与发言";
