--- a/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -1,179 +1,333 @@
-"ktv_join" = "加入";
-"ktv_score" = "评分";
-"ktv_loading" = "加载中…";
-"ktv_create_room" = "创建房间";
-"ktv_room_title" = "房间标题";
-"ktv_random" = "随机";
-"ktv_room_is_encryption" = "房间加密";
-"ktv_open" = "公开";
-"ktv_encryption" = "加密";
-"ktv_please_input_4_pwd" = "请设置4位数房间密码";
-"ktv_net_status_good" = "本机网络好";
-"ktv_net_status_m" = "本机网络良";
-"ktv_net_status_low" = "本机网络差";
-"ktv_net_status_un_know" = "本机网络未知";
-"ktv_please_input_room_name" = "请输入房间名称";
-"ktv_empty_search" = "未找到相关结果";
-"ktv_song_and_singer" = "%s - %s";
-"ktv_please_use_headset" = "请插入耳机使用耳返功能";
-"ktv_input_remote_volume" = "请输入0到100的正整数";
-"ktv_mv" = "MV";
-"ktv_song_background" = "歌词背景";
-"ktv_more_actions" = "更多操作";
-"ktv_create" = "创建";
-"ktv_create_tips1" = "本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110";
-"ktv_create_sr_tips1" = "欢迎来到声网抢麦接唱游戏，\n 热歌劲曲、歌词同步、动态打分等等功能一站体验\n一起来抢吧！";
-"ktv_create_tips2" = "本应用为测试产品，请勿商用";
-"ktv_create_tips3" = "单次K歌最长20分钟，每个房间最多8人";
-"ktv_room_before_speaker" = "点击空麦位，上麦后可点歌与发言";
-"ktv_room_before_gameStart" = "点击空麦位上麦后加入游戏";
-"ktv_room_owner" = "房主";
-"ktv_room_sing1" = "演唱中";
-"ktv_room_sing1_1" = "合唱中";
-"ktv_room_original" = "原唱";
-"ktv_room_change_song" = "切歌";
-"ktv_room_seat_off" = "下麦";
-"ktv_room_player_pause" = "暂停";
-"ktv_room_player_play" = "播放";
-"ktv_room_player_tweak" = "调音";
-"ktv_room_choose_song" = "点歌";
-"ktv_room_chosen_song_list" = "已点";
-"ktv_room_sing2" = "演唱中";
-"ktv_room_no_sing" = "当前无人演唱\n点击“点歌”一展歌喉";
-"ktv_dialog_migu_tip" = "";
-"ktv_dialog_music_list_empty" = "未找到相关搜索结果";
-"ktv_dialog_music_list_search_hint" = "搜索歌曲";
-"ktv_lrc_loading" = "歌曲准备中";
-"ktv_lrc_load_fail" = "加载失败";
-"ktv_room_change_music_title" = "切歌";
-"ktv_room_change_music_msg" = "终止当前歌曲的演唱？";
-"ktv_room_time_wait_join_chorus" = "等待加入合唱";
-"ktv_room_time_join_chorus_" = "抢麦倒计时";
-"ktv_room_time_wait" = "%02d:%02d";
-"ktv_music_join_chorus" = "加入合唱";
-"ktv_music_chorus_start_now" = "不等了，独唱";
-"ktv_use_overtime" = "试用时间已到";
-"ktv_need_up" = "请先上坐";
-"ktv_error_cut" = "该歌曲无法进行人声切换";
-"ktv_join_error" = "加入房间失败";
-"ktv_sync_music_error" = "同步歌曲失败";
-"ktv_leave_title" = "关闭歌房";
-"ktv_leave_msg" = "关闭歌房后所有成员将被移除房间";
-"ktv_music_menu_dialog_title" = "控制台";
-"ktv_music_menu_dialog_ear" = "耳返";
-"ktv_music_menu_dialog_tone" = "升降调";
-"ktv_music_menu_dialog_vol1" = "人声音量";
-"ktv_music_menu_dialog_remote_volume" = "远端音量";
-"ktv_music_menu_dialog_vol2" = "伴奏";
-"ktv_music_menu_dialog_effect" = "效果";
-"ktv_song_rank_1" = "热歌榜";
-"ktv_song_rank_2" = "嗨唱推荐";
-"ktv_song_rank_3" = "抖音热歌";
-"ktv_song_rank_4" = "古风热歌";
-"ktv_song_rank_5" = "KTV必唱";
-"ktv_song_rank_6" = "新歌榜";
-"ktv_song_rank_7" = "热门新歌";
-"ktv_song_search_place_holder" = "搜索歌曲、歌手";
-"ktv_song_effect_1" = "空间塑造";
-"ktv_song_effect_2" = "曲风音效";
-"ktv_song_effect_3" = "电音音效";
-"ktv_song_effect_4" = "更多音效";
-"ktv_start_electric_sound" = "启动电音";
-"ktv_select_mode" = "选择调式";
-"ktv_gentle_wind" = "和风";
-"ktv_minor" = "小调";
-"ktv_major" = "大调";
-"ktv_select_starting_scale" = "选择起始音阶";
-"ktv_effect_a" = "A";
-"ktv_effect_a_2" = "A#";
-"ktv_effect_b" = "B";
-"ktv_effect_c" = "C";
-"ktv_effect_c_2" = "C#";
-"ktv_effect_d" = "D";
-"ktv_effect_d_2" = "D#";
-"ktv_effect_e" = "E";
-"ktv_effect_f" = "F";
-"ktv_effect_f_2" = "F#";
-"ktv_effect_g" = "G";
-"ktv_effect_g_2" = "G#";
-"ktv_def_nothing" = "默认无";
-"ktv_room_big_man" = "大房间(男)";
-"ktv_room_small_man" = "小房间(男)";
-"ktv_room_big_woman" = "大房间(女)";
-"ktv_room_small_woman" = "小房间(女)";
-"ktv_your_score" = "你的得分";
-"ktv_room_count" = "在线";
-"ktv_zc" = "主唱";
-"ktv_hc" = "合唱";
-"ktv_song_ordering_person" = "点唱：";
-"ktv_song_ordering_person_chorus" = "合唱：";
-"ktv_people" = "人";
-"ktv_music_menu_dialog_mv" = "MV";
-"ktv_score_formatter" = "%@分";
-"ktv_beauty_voice" = "美声";
-"ktv_voice_effect" = "音效";
-"ktv_camera" = "摄像头";
-"ktv_leave_chorus" = "退出合唱";
+"sr_join" = "加入";
+"sr_score" = "评分";
+"sr_loading" = "加载中…";
+"sr_create_room" = "创建房间";
+"sr_room_title" = "房间名称";
+"sr_create_tips" = "本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110";
+"sr_random" = "随机";
+"sr_room_is_encryption" = "房间加密";
+"sr_room_placeHolder" = "填写房间名称,吸引更多观众";
+"sr_open" = "公开";
+"sr_encryption" = "加密";
+"sr_please_input_4_pwd" = "请设置4位数房间密码";
+"sr_net_status_good" = "本机网络好";
+"sr_net_status_m" = "本机网络良";
+"sr_net_status_low" = "本机网络差";
+"sr_net_status_un_know" = "本机网络未知";
+"sr_please_input_room_name" = "请输入房间名称";
+"sr_empty_search" = "未找到相关结果";
+"sr_song_and_singer" = "%s - %s";
+"sr_please_use_headset" = "请插入耳机使用耳返功能";
+"sr_input_remote_volume" = "请输入0到100的正整数";
+"sr_mv" = "MV";
+"sr_song_background" = "歌词背景";
+"sr_more_actions" = "更多操作";
+"sr_create" = "创建";
+"sr_create_tips1" = "欢迎来到声网嗨歌抢唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！";
+"sr_create_tips2" = "本应用为测试产品，请勿商用";
+"sr_create_tips3" = "单次K歌最长20分钟，每个房间最多8人";
+"sr_room_before_speaker" = "点击空麦位，上麦后可点歌与发言";
+"sr_room_owner" = "房主";
+"sr_room_sing1" = "演唱中";
+"sr_room_sing1_1" = "合唱中";
+"sr_room_original" = "原唱";
+"sr_room_change_song" = "切歌";
+"sr_room_seat_off" = "下麦";
+"sr_room_player_pause" = "暂停";
+"sr_room_player_play" = "播放";
+"sr_room_player_tweak" = "调音";
+"sr_room_choose_song" = "点歌";
+"sr_room_chosen_song_list" = "已点";
+"sr_room_chosen_song_list_0" = "已点0/8";
+"sr_room_sing2" = "演唱中";
+"sr_room_no_sing" = "当前无人演唱\n点击“点歌”一展歌喉";
+"sr_dialog_migu_tip" = "";
+"sr_dialog_music_list_empty" = "未找到相关搜索结果";
+"sr_dialog_music_list_search_hint" = "搜索歌曲";
+"sr_lrc_loading" = "歌曲准备中";
+"sr_lrc_load_fail" = "加载失败";
+"sr_room_change_music_title" = "切歌";
+"sr_room_change_music_msg" = "终止当前歌曲的演唱？";
+"sr_room_time_wait_join_chorus" = "等待加入合唱";
+"sr_room_time_join_chorus_" = "抢麦倒计时";
+"sr_room_time_wait" = "%02d:%02d";
+"sr_music_join_chorus" = "加入合唱";
+"sr_music_chorus_start_now" = "不等了，独唱";
+"sr_use_overtime" = "试用时间已到";
+"sr_need_up" = "请先上坐";
+"sr_error_cut" = "该歌曲无法进行人声切换";
+"sr_join_error" = "加入房间失败";
+"sr_sync_music_error" = "同步歌曲失败";
+"sr_leave_title" = "关闭歌房";
+"sr_leave_msg" = "关闭歌房后所有成员将被移除房间";
+"sr_music_menu_dialog_title" = "控制台";
+"sr_music_menu_dialog_ear" = "耳返";
+"sr_earback_micphone_pull" = "耳返已关闭，请插入耳机重新开启";
+"sr_music_menu_dialog_tone" = "升降调";
+"sr_music_menu_dialog_vol1" = "人声音量";
+"sr_music_menu_dialog_remote_volume" = "远端音量";
+"sr_music_menu_dialog_vol2" = "伴奏音量";
+"sr_music_menu_dialog_effect" = "效果";
+"sr_song_rank_1" = "热歌榜";
+"sr_song_rank_2" = "嗨唱推荐";
+"sr_song_rank_3" = "抖音热歌";
+"sr_song_rank_4" = "古风热歌";
+"sr_song_rank_5" = "KTV必唱";
+"sr_song_rank_6" = "新歌榜";
+"sr_song_rank_7" = "热门新歌";
+"sr_song_search_place_holder" = "搜索歌曲、歌手";
+"sr_song_effect_1" = "空间塑造";
+"sr_song_effect_2" = "曲风音效";
+"sr_song_effect_3" = "电音音效";
+"sr_song_effect_4" = "更多音效";
+"sr_start_electric_sound" = "启动电音";
+"sr_select_mode" = "选择调式";
+"sr_gentle_wind" = "和风";
+"sr_minor" = "小调";
+"sr_major" = "大调";
+"sr_select_starting_scale" = "选择起始音阶";
+"sr_effect_a" = "A";
+"sr_effect_a_2" = "A#";
+"sr_effect_b" = "B";
+"sr_effect_c" = "C";
+"sr_effect_c_2" = "C#";
+"sr_effect_d" = "D";
+"sr_effect_d_2" = "D#";
+"sr_effect_e" = "E";
+"sr_effect_f" = "F";
+"sr_effect_f_2" = "F#";
+"sr_effect_g" = "G";
+"sr_effect_g_2" = "G#";
+"sr_def_nothing" = "默认无";
+"sr_room_big_man" = "大房间(男)";
+"sr_room_small_man" = "小房间(男)";
+"sr_room_big_woman" = "大房间(女)";
+"sr_room_small_woman" = "小房间(女)";
+"sr_your_score" = "你的得分";
+"sr_room_count" = "在线";
+"sr_zc" = "主唱";
+"sr_hc" = "合唱";
+"sr_song_ordering_person" = "点唱：";
+"sr_song_ordering_person_chorus" = "合唱：";
+"sr_people" = "人";
+"sr_music_menu_dialog_mv" = "MV";
+"sr_score_formatter" = "%@分";
+"sr_beauty_voice" = "美声";
+"sr_voice_effect" = "音效";
+"sr_camera" = "摄像头";
+"sr_leave_chorus" = "退出合唱";
 
-"ktv_toggle_mic" = "麦克风启用或静音";
-"ktv_choose_cover" = "选择你喜欢的歌曲封面";
-"ktv_chorus" = "合唱";
-"ktv_order_song" = "点歌";
-"ktv_random_room_name" = "随机生成一个房间名称";
-"ktv_tone_down" = "点击调低音调";
-"ktv_tone_up" = "点击调高音调";
-"ktv_remote_volume_down" = "点击调低远端音量";
-"ktv_remote_volume_up" = "点击调高远端音量";
-"ktv_ok" = "好的";
-"ktv_done" = "完成";
-"ktv_search" = "搜索";
-"ktv_confirm" = "确定";
-"ktv_cancel" = "取消";
-"ktv_error_permisstion" = "需要相应权限，请打开";
-"ktv_room_list_title" = "歌房";
-"ktv_room_list_empty" = "请创建一个歌房";
-"ktv_create_room_name_label" = "歌房名称";
-"ktv_create_room_name_label2" = "本应用为测试产品，请勿商用。单次直播最长10分钟，每个频道最多10人。";
-"ktv_create_button" = "创建";
-"ktv_dialog_join_msg" = "准备中，请等待…";
-"ktv_permission_alert" = "缺少运行所需的必要权限，是否确认申请？";
-"ktv_permission_refused" = "运行此功能需要的必要权限未被授予。";
-"ktv_network_unavailable" = "未检测到可用网络，确认继续？";
-"ktv_no_lrc" = "暂无歌词 ";
-"ktv_content" = "监测到当前内容存在违规行为";
-"ktv_iknow" = "我知道了";
-"ktv_skip_prelude" = "跳过前奏";
-"ktv_skip_postlude" = "跳过尾奏";
-"ktv_onseat_toast" = "加入合唱前，您需要先上麦";
-"ktv_load_failed_no_song" = "加载失败，当前已无歌曲";
-"ktv_load_failed" = "歌曲加载失败";
-"ktv_try" = "已尝试三次，请自动切歌";
-"ktv_load_failed_another_song" = "加载失败，当前已切换到另一首歌";
-"ktv_too_fast" = "操作太频繁";
-"ktv_lrc_failed" = "歌词加载失败";
-"ktv_retry" = "点击重试";
-"ktv_join_chorus_failed" = "加入合唱失败";
-"ktv_enable_electronic" = "启用电音";
-"ktv_chooseSong_failed" = "点歌失败，请重试";
-"ktv_audio_onmic" = "音频上麦";
-"ktv_video_onmic" = "视频上麦";
-"ktv_room_concert" = "演唱会";
-"ktv_room_recording studio" = "录音棚";
-"ktv_room_gramophone" = "留声机";
-"ktv_room_spacious" = "空旷";
-"ktv_room_ethereal" = "空灵";
-"ktv_room_pop" = "流行";
-"ktv_insert_title" = "请输入标题";
-"ktv_online_ktv" = "在线K歌房";
-"ktv_input_pwd" = "输入密码";
-"ktv_pls_input_pwd" = "请输入房间密码";
-"ktv_change_song" = "切换歌曲";
-"ktv_change_next_song" = "切换下一首歌歌曲？";
-"ktv_disband_room" = "解散房间";
-"ktv_exit_room" = "退出房间";
-"ktv_confirm_disband_room" = "确定解散该房间吗？";
-"ktv_confirm_exit_room" = "确定退出该房间吗？";
-"ktv_singRelay" = "抢麦接唱";
+"sr_toggle_mic" = "麦克风启用或静音";
+"sr_choose_cover" = "选择你喜欢的歌曲封面";
+"sr_chorus" = "合唱";
+"sr_order_song" = "点歌";
+"sr_random_room_name" = "随机生成一个房间名称";
+"sr_tone_down" = "点击调低音调";
+"sr_tone_up" = "点击调高音调";
+"sr_remote_volume_down" = "点击调低远端音量";
+"sr_remote_volume_up" = "点击调高远端音量";
+"sr_ok" = "好的";
+"sr_done" = "完成";
+"sr_search" = "搜索";
+"sr_confirm" = "确定";
+"sr_cancel" = "取消";
+"sr_error_permisstion" = "需要相应权限，请打开";
+"sr_room_list_title" = "歌房";
+"sr_room_list_empty" = "请创建一个歌房";
+"sr_create_room_name_label" = "歌房名称";
+"sr_create_room_name_label2" = "本应用为测试产品，请勿商用。单次直播最长10分钟，每个频道最多10人。";
+"sr_create_button" = "创建";
+"sr_dialog_join_msg" = "准备中，请等待…";
+"sr_permission_alert" = "缺少运行所需的必要权限，是否确认申请？";
+"sr_permission_refused" = "运行此功能需要的必要权限未被授予。";
+"sr_network_unavailable" = "未检测到可用网络，确认继续？";
+"sr_no_lrc" = "暂无歌词 ";
+"sr_content" = "监测到当前内容存在违规行为";
+"sr_iknow" = "我知道了";
+"sr_skip_prelude" = "跳过前奏";
+"sr_skip_postlude" = "跳过尾奏";
+"sr_onseat_toast" = "加入合唱前，您需要先上麦";
+"sr_load_failed_no_song" = "加载失败，当前已无歌曲";
+"sr_load_failed" = "歌曲加载失败";
+"sr_try" = "已尝试三次，请自动切歌";
+"sr_load_failed_another_song" = "加载失败，当前已切换到另一首歌";
+"sr_too_fast" = "操作太频繁";
+"sr_lrc_failed" = "歌词加载失败";
+"sr_retry" = "点击重试";
+"sr_join_chorus_failed" = "加入合唱失败";
+"sr_enable_electronic" = "启用电音";
+"sr_chooseSong_failed" = "点歌失败，请重试";
+"sr_audio_onmic" = "音频上麦";
+"sr_video_onmic" = "视频上麦";
+"sr_room_concert" = "演唱会";
+"sr_room_recording studio" = "录音棚";
+"sr_room_gramophone" = "留声机";
+"sr_room_spacious" = "空旷";
+"sr_room_ethereal" = "空灵";
+"sr_room_pop" = "流行";
+"sr_insert_title" = "请输入标题";
+"sr_online_ktv" = "在线K歌房";
+"sr_input_pwd" = "输入密码";
+"sr_pls_input_pwd" = "请输入房间密码";
+"sr_change_song" = "切换歌曲";
+"sr_change_next_song" = "切换下一首歌歌曲？";
+"sr_disband_room" = "解散房间";
+"sr_exit_room" = "退出房间";
+"sr_confirm_disband_room" = "确定解散该房间吗？";
+"sr_confirm_exit_room" = "确定退出该房间吗？";
+"sr_per_setting" = "配置";
+"sr_per_style" = "专业模式";
+"sr_per_vol_quality" = "音质";
+"sr_per_ans" = "降低背景噪音";
+"sr_aiaec_switch" = "AIAEC开关";
+"sr_aiaec_level" = "AIAEC强度选择";
+"sr_perSetting" = "设置";
+"sr_low_delay_mode" = "低延时模式";
+"sr_close_aec" = "关闭";
+"sr_aec_mid" = "中";
+"sr_aec_high" = "高";
+"sr_normal_vol" = "标准音质";
+"sr_high_vol" = "高音质";
+"sr_mic_index" = "号麦";
+"sr_soundcard" = "虚拟声卡";
+"sr_soundcard_open" = "开启";
 
+"sr_effect_off" = "原声";
+"sr_effect_concert" = "演唱会";
+"sr_effect_studio" = "录音棚";
+"sr_effect_phonograph" = "留声机";
+"sr_effect_spatial" = "空旷";
+"sr_effect_ethereal" = "空灵";
+"sr_effect_pop" = "流行";
 
+"sr_lrc_load_failed" = "歌词加载失败";
+"sr_lrc_loading" = "加载中";
+"sr_retry" = "  点击重试  ";
+"sr_leave_chorus" = "退出合唱";
+"sr_show_vol" = "突出人声";
+"sr_ori_sing" = "原唱";
+"sr_lead_sing" = "导唱";
+"sr_vol_setting" = "设置人声";
+
+"sr_dump" = "音频Dump";
+"sr_export_log" = "导出log";
+"sr_clear_dump" = "清除Dump";
+"sr_clear_log" = "清除Log";
+"sr_input_key" = "请输入私参Key";
+"sr_input_value" = "请输入私参Key";
+"sr_set_params" = "设置私参";
+"sr_debug_confirm" = "确认";
+"sr_ear_switch" = "耳返开关";
+"sr_ear_setting" = "耳返设置";
+"sr_ear_vol" = "耳返音量";
+"sr_ear_warning" = "开启耳返可实时听到自己的声音，唱歌的时候及时调整";
+"sr_ear_warning2" = " 因为延时和体验问题，在耳返里听到的声音是没有音效的（包括虚拟声卡、场景塑造（KTV、演唱会））";
+"sr_ear_without_headset" = "使用耳返必须插入耳机，当前未检测到耳机";
+
+"sr_create_room_title1" = "和你一起看月亮";
+"sr_create_room_title2" = "治愈";
+"sr_create_room_title3" = "一锤定音";
+"sr_create_room_title4" = "有酒吗";
+"sr_create_room_title5" = "早安序曲";
+"sr_create_room_title6" = "风情万种的歌房";
+"sr_create_room_title7" = "近在远方";
+"sr_create_room_title8" = "风中诗";
+"sr_create_room_title9" = "那年风月";
+"sr_create_room_title10" = "三万余年";
+"sr_create_room_title11" = "七十二街";
+"sr_create_room_title12" = "情怀如诗";
+"sr_create_room_title13" = "简遇而安";
+"sr_create_room_title14" = "十里笙歌";
+"sr_create_room_title15" = "回风舞雪";
+"sr_create_room_title16" = "梦初醒处";
+"sr_create_room_title17" = "别来无恙";
+"sr_create_room_title18" = "三里清风";
+"sr_create_room_title19" = "烟雨万重";
+"sr_create_room_title20" = "水洗晴空";
+"sr_create_room_title21" = "轻风淡月";
+"sr_room_exit" = "连接超时，房间已解散";
+"sr_room_timeout" = "您已体验超过20分钟，当前房间已过期，请退出重新创建房间";
+"sr_room_offline" = "当前房间已过期,请退出";
+"sr_owner_leave" = "房主已解散房间,请确认离开房间";
+"sr_mic_full" = "麦位已满，请在他人下麦后重试";
+"sr_join_chorus_failed" = "加入合唱失败，原因:连接已断开";
+"sr_per_lose" = "人声突出功能已失效，请重设";
+"sr_change_failed" = "切歌失败，理由:连接已断开";
+"sr_per_set_once" = "每首歌仅可设置一次人声突出对象，请在下首歌再设置";
+"sr_load_failed_and_change" = "加载歌曲失败，请切歌";
+"sr_onMic" = "上麦";
+"sr_people" = "人";
+"sr_vol_gain" = "增益调节";
+"sr_vol_gain_level" = "调节声音信号的增益倍数";
+"sr_voice_type1" = "大叔音";
+"sr_voice_type2" = "妈音";
+"sr_voice_type3" = "青叔音";
+"sr_voice_type4" = "御妈音";
+"sr_voice_type5" = "青年音";
+"sr_voice_type6" = "少御音";
+
+"sr_voice_desc1" = "高混响|KTV";
+"sr_voice_desc2" = "高混响|KTV";
+"sr_voice_desc3" = "明亮|磁性";
+"sr_voice_desc4" = "明亮|磁性";
+"sr_voice_desc5" = "低沉|温暖";
+"sr_voice_desc6" = "醇厚|饱满";
+
+"sr_pre_effect" = "预设音效";
+"sr_sex_kr" = "性感欧巴";
+"sr_sec_kr_desc" = "悦耳|磁性";
+
+"sr_effect_desc1" = "大叔音(高混响 | KTV)";
+"sr_effect_desc2" = "妈音(高混响 | KTV)";
+"sr_effect_desc3" = "青叔音(明亮 | 磁性)";
+"sr_effect_desc4" = "御妈音(明亮 |磁性)";
+"sr_effect_desc5" = "青年音(低沉 | 温暖)";
+"sr_effect_desc6" = "少御音(醇厚 | 饱满)";
+"sr_open_soundCard" = "开启虚拟声卡";
+"sr_mic_type" = "麦克风类型1";
+"sr_choose_sc_params" = "选择麦克风的预设参数";
+"sr_skip_pre" = "跳过前奏";
+"sr_skip_end" = "跳过尾奏";
+
+"sr_your_score" = "你的总分";
+"sr_networkbad_forbid" = "本机网络差，无法加入合唱";
+"sr_per_bro" = "专业主播";
+"sr_full_song" = "歌曲已满，开始游戏吧";
+"sr_search_music_singer" = "搜索歌曲,歌手";
+"sr_atleast_4" = "至少需要4首歌才能开始游戏";
+"sr_empty_seat" = "点击空麦位上麦后加入游戏";
+"sr_name" = "嗨歌抢唱";
+"sr_game_isOn" = "当前房间正在游戏中，请退出";
+"sr_this_time" = "本轮由 ";
+"sr_get_mic" = "抢到麦";
+
+"sr_game_start_cant_make_down" = "正在游戏中，游戏结束后方可踢人下麦";
+"sr_game_start_cant_down" = "正在游戏中，游戏结束后方可下麦";
+"sr_game_start_join_before" = "游戏进行中，请在下局游戏开始前上麦";
+
+"sr_no_song" = "暂无演唱歌单，开始点歌吧！";
+"sr_bro_choose" = "房主点歌中，游戏即将开始";
+"sr_start" = "嗨唱开始";
+"sr_next_song" = "下一首";
+"sr_nobody_next" = "本轮无人演唱\n即将播放下一首";
+"sr_this_score" = "本轮评分";
+
+"sr_empty_list" = "暂无上榜";
+"sr_song_count" = "段";
+"sr_song_score" = "分";
+"sr_total_score" = "总分";
+"sr_success" = "抢唱成功";
+"sr_rank_list" = "排名";
+"sr_rank_player" = "玩家";
+"sr_next_ready" = "下段演唱即将开始，准备抢唱";
+"sr_next_start" = "下段演唱即将开始";
+"sr_current_tbd" = "本段由 ";
+"sr_next_tbd" = "下段由 ";
+"sr_next_sing" = " 演唱";
+"sr_game_rule" = "游戏规则";
+"sr_tip_off" = "收起";
+"sr_rule_desc" = "系统随机播放一首分好的歌曲，首段由房主主唱，抢到演唱权的玩家演唱下一段，游戏末显示评分排名。";
+"sr_ready_choose" = "即将抢唱下轮歌曲";
+"sr_notice" = "公告 >";
+"sr_song_loading" = "歌曲准备中...";
 
