--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -3,4 +3,34 @@
     <string name="joy_play">弹幕玩法</string>
     <string name="joy_play_empty_room">欢迎来到声网弹幕玩法方案\n目前暂无房间</string>
     <string name="joy_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过10mins</string>
+    <string name="joy_room_id">ID: %s</string>
+    <string name="joy_user_count">%d人</string>
+    <string name="joy_broadcaster_bad_exit">检测到上次直播异常退出，请重新创建直播间开播</string>
+    <string name="joy_room_name_empty_tips">请输入房间名</string>
+    <string name="joy_live_prepare_room_name_hint">请输入房间名称</string>
+    <string name="joy_choose_game">选择弹幕玩法</string>
+
+    <string-array name="joy_roomName_array">
+        <item>和你一起看月亮</item>
+        <item>治愈</item>
+        <item>一锤定音</item>
+        <item>有酒吗</item>
+        <item>早安序曲</item>
+        <item>风情万种的歌房</item>
+        <item>近在远方</item>
+        <item>风中诗</item>
+        <item>那年风月</item>
+        <item>三万余年</item>
+        <item>七十二街</item>
+        <item>情怀如诗</item>
+        <item>简遇而安</item>
+        <item>十里笙歌</item>
+        <item>回风舞雪</item>
+        <item>梦初醒处</item>
+        <item>别来无恙</item>
+        <item>三里清风</item>
+        <item>烟雨万重</item>
+        <item>水洗晴空</item>
+        <item>轻风淡月</item>
+    </string-array>
 </resources>
