--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources translatable="false">
-    <string name="joy_play">弹幕玩法</string>
+    <string name="joy_gameplay">弹幕玩法</string>
     <string name="joy_play_empty_room">欢迎来到声网弹幕玩法方案\n目前暂无房间</string>
     <string name="joy_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过10mins</string>
     <string name="joy_room_id">ID: %s</string>
@@ -9,6 +9,25 @@
     <string name="joy_room_name_empty_tips">请输入房间名</string>
     <string name="joy_live_prepare_room_name_hint">请输入房间名称</string>
     <string name="joy_choose_game">选择弹幕玩法</string>
+    <string name="joy_tips_for_launching_anchors">主播开播须知</string>
+    <string name="joy_rules_of_play">玩法规则</string>
+    <string name="joy_anchor_not_open_gameplay">主播尚未开启玩法\n请耐心等待</string>
+    <string name="joy_gift">礼物</string>
+    <string name="joy_send_message">发送弹幕</string>
+    <string name="joy_send">发送</string>
+    <string name="joy_living_end_title">结束游戏</string>
+    <string name="joy_living_end_content">是否退出游戏直播？</string>
+    <string name="joy_living_timeout_title">游戏超时自动退出</string>
+    <string name="joy_living_timeout_content">重新体验游戏请返回创建房间</string>
+
+    <string-array name="joy_gift_array">
+        <item>爱心</item>
+        <item>鲜花</item>
+        <item>兔子</item>
+        <item>薯条</item>
+        <item>钻石</item>
+        <item>火箭</item>
+    </string-array>
 
     <string-array name="joy_roomName_array">
         <item>和你一起看月亮</item>
