--- a/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
@@ -30,7 +30,10 @@
 "setting_statistic" = "实时数据";
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
 
+"game_play_introduce"="玩法规则";
+"dialog_title_gamelist"="选择弹幕玩法";
 "gamelist_selected_confirm"="确认";
+"gamenotice_selected_confirm"="我知道了";
 "joy_user_count" = "人";
 
 "show_create_room_name1"="小可爱是我呀";
