--- a/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "sr_song_background" = "歌词背景";
 "sr_more_actions" = "更多操作";
 "sr_create" = "创建";
-"sr_create_tips1" = "欢迎来到声网嗨歌抢唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！";
+"sr_create_tips1" = "欢迎来到声网抢麦接唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！";
 "sr_create_tips2" = "本应用为测试产品，请勿商用";
 "sr_create_tips3" = "单次K歌最长20分钟，每个房间最多8人";
 "sr_room_before_speaker" = "点击空麦位，上麦后可点歌与发言";
@@ -296,7 +296,7 @@
 "sr_search_music_singer" = "搜索歌曲,歌手";
 "sr_atleast_4" = "至少需要4首歌才能开始游戏";
 "sr_empty_seat" = "点击空麦位上麦后加入游戏";
-"sr_name" = "嗨歌抢唱";
+"sr_name" = "抢麦接唱";
 "sr_game_isOn" = "当前房间正在游戏中，请退出";
 "sr_this_time" = "本轮由 ";
 "sr_get_mic" = "抢到麦";
