--- a/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/en.lproj/Localizable.strings
@@ -16,18 +16,13 @@
 "user_list_title"="弹幕玩法";
 "room_list_refresh_tips"="房间列表已刷新";
 "room_list_empty_desc"="欢迎来到声网弹幕玩法方案\n目前暂无房间";
-"call_not_init"="网络异常";
 "call_state_connecting"="连接中";
 "user_list_create_room"="创建房间";
+"toast_no_room_name"="房间名不能为空";
 "user_list_create"="开始直播";
-"user_list_creating"="创建中";
-"user_list_live_tag"="Live";
-"create_room_tips"="填写房间名称，吸引更多观众";
 "create_room_title"="房间名称";
-"create_room_random"="随机";
 "create_room_name_empty_tips"="房间名称不能为空";
-"call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过10mins";
-"setting_statistic" = "实时数据";
+"joy_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过10mins";
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
 
 "room_send_message"="发送弹幕";
