--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="joy_living_timeout_content">重新体验游戏请返回创建房间</string>
     <string name="joy_send_message_success">指令发送成功</string>
     <string name="joy_join_the_camp_first">请先加入阵营</string>
+    <string name="joy_living_end">游戏直播结束</string>
 
     <string-array name="joy_gift_array">
         <item>爱心</item>
