--- a/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SingRelay/SRResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -149,6 +149,7 @@
 "sr_onseat_toast" = "加入合唱前，您需要先上麦";
 "sr_load_failed_no_song" = "加载失败，当前已无歌曲";
 "sr_load_failed" = "歌曲加载失败";
+"sr_load_failed_next" = "歌曲加载失败,请切歌";
 "sr_try" = "已尝试三次，请自动切歌";
 "sr_load_failed_another_song" = "加载失败，当前已切换到另一首歌";
 "sr_too_fast" = "操作太频繁";
@@ -254,7 +255,7 @@
 "sr_per_lose" = "人声突出功能已失效，请重设";
 "sr_change_failed" = "切歌失败，理由:连接已断开";
 "sr_per_set_once" = "每首歌仅可设置一次人声突出对象，请在下首歌再设置";
-"sr_load_failed_and_change" = "加载歌曲失败，请切歌";
+"sr_load_failed_and_change" = "加载歌曲失败";
 "sr_onMic" = "上麦";
 "sr_people" = "人";
 "sr_vol_gain" = "增益调节";
