--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -22,7 +22,11 @@
     <string name="joy_living_timeout_content">重新体验游戏请返回创建房间</string>
     <string name="joy_send_message_success">指令发送成功</string>
     <string name="joy_join_the_camp_first">请先加入阵营</string>
+    <string name="joy_send_gift_success">发送礼物成功</string>
     <string name="joy_living_end">游戏直播结束</string>
+    <string name="joy_join_room_error">加入房间失败，请重试</string>
+    <string name="joy_get_start_game_error">获取进行中的游戏失败</string>
+    <string name="joy_automatic_exit_of_gameplay_exception">玩法异常自动退出</string>
 
     <string-array name="joy_gift_array">
         <item>爱心</item>
