--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="ktv_room_player_play">播放</string>
     <string name="ktv_room_player_tweak">调音</string>
     <string name="ktv_room_choose_song">点歌</string>
+    <string name="ktv_room_choose_song_loading">加载中</string>
     <string name="ktv_room_chosen_song_list">已点</string>
     <string name="ktv_room_sing2">演唱中</string>
     <string name="ktv_room_no_sing">当前无人演唱\n点击“点歌”一展歌喉</string>
@@ -112,7 +113,6 @@
     <string name="ktv_voice_effect">音效</string>
     <string name="ktv_camera">摄像头</string>
     <string name="ktv_leave_chorus">退出合唱</string>
-    <string name="ktv_voice_highlight">突出人声</string>
     <string name="ktv_voice_profile">配置</string>
     <string name="ktv_voice_scoring_difficulty">打分难度</string>
     <string name="ktv_voice_scoring_difficulty_low">低难度</string>
@@ -132,8 +132,10 @@
     <string name="ktv_voice_AINS_high">高</string>
     <string name="ktv_low_latency">低延迟模式</string>
     <string name="ktv_AIAEC_switcher">AIAEC 开关</string>
+    <string name="ktv_AIAEC">AIAEC</string>
     <string name="ktv_AIAEC_strength">AIAEC 强度选择</string>
-    <string name="ktv_AIAEC_input_hint">请输入0～4的正整数</string>
+    <string name="ktv_AIAEC_strength_down">调高AIAEC强度</string>
+    <string name="ktv_AIAEC_strength_up">调低AIAEC强度</string>
     <string name="ktv_seat_num">%s号麦</string>
 
     <!--    Content Description-->
@@ -210,8 +212,6 @@
     <string name="ktv_sound_mic_phone_type_tips">选择麦克风的预设参数</string>
     <string name="ktv_sound_preset_type">预设音效</string>
     <string name="ktv_sound_preset_off">关闭</string>
-    <string name="ktv_highlight_disable">人声突出已失效</string>
-    <string name="ktv_highlight_limit">每首歌仅可设置一次人声突出对象，请在下首歌再设置</string>
     <string name="ktv_notice">提示</string>
 
     <string name="ktv_debug">Debug</string>
@@ -224,4 +224,15 @@
     <string name="ktv_earphone_close_tip">耳返已关闭，请插入耳机重新开启</string>
     <string name="ktv_loading_music">%1s歌曲准备中…</string>
     <string name="ktv_join_chorus_seat_full">没有空麦位，等等再唱吧</string>
+
+    <string name="ktv_create_room_failed">创建房间失败，错误：%1s</string>
+    <string name="ktv_join_room_failed">加入房间失败，错误：%1s</string>
+    <string name="ktv_enter_seat_failed">上麦失败，错误：%1s</string>
+    <string name="ktv_leave_seat_failed">下麦失败，错误：%1s</string>
+    <string name="ktv_kick_seat_failed">踢人下麦失败，错误：%1s</string>
+    <string name="ktv_get_songs_failed">拉取歌单失败，错误：%1s</string>
+    <string name="ktv_choose_song_failed">点歌失败，错误：%1s</string>
+    <string name="ktv_remove_song_failed">删除歌曲失败，错误：%1s</string>
+    <string name="ktv_pin_song_failed">置顶歌曲失败，错误：%1s</string>
+    <string name="ktv_change_song_failed">切歌失败，错误：%1s</string>
 </resources>
