--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "app_not_logoff"="暂不注销";
 "app_debug_mode"="开发者模式";
 "exit_app_debug_mode"="退出开发者模式";
+"app_devmode_send_log"="自动发送日志";
 
 "app_voice_chat"="语聊房";
 "app_show_live"="秀场直播";
