--- a/Android/common/ui-widget/src/main/res/values/strings.xml
+++ b/Android/common/ui-widget/src/main/res/values/strings.xml
@@ -34,8 +34,10 @@
     <string name="time_up_exit_room">您已体验超过20分钟，当前房间已过期，请退出重新创建房间</string>
     <string name="expire_exit_room">当前房间已过期，请退出</string>
 
-    <string name="report_room">举报</string>
-    <string name="report_room_success">举报成功</string>
+    <string name="common_report_content">举报</string>
+    <string name="common_report_content_tips">举报成功</string>
+    <string name="common_report_user">拉黑用户</string>
+    <string name="common_report_user_tips">你已经拉黑该用户</string>
 
     <string name="comm_permission_leak_auido_title">没有麦克风权限</string>
     <string name="comm_permission_leak_auido_content">请在设置中打开麦克风权限</string>
