--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -212,6 +212,7 @@
     <string name="show_setting_preset_done">已更新到\"秀场模式\"最佳配置</string>
     <string name="show_setting_audience">观众设置</string>
     <string name="show_living_end_title">直播结束</string>
+    <string name="show_living_end_title_error">网络异常, 请重新开播</string>
     <string name="show_living_end_back_room_list">返回房间列表</string>
     <string name="show_live_chat_coming">加入房间</string>
     <string name="show_live_chat_leaving">离开房间</string>
@@ -240,6 +241,7 @@
     <string name="show_beauty_item_virtual_bg_mitao">蜜桃</string>
     <string name="show_beauty_green_screen_tip">为了保证虚拟背景最佳效果，请确认实际环境已搭建绿幕，否则虚拟背景不生效哦</string>
     <string name="show_live_detail_living_end">直播已结束</string>
+    <string name="show_live_detail_living_end_error">网络异常, 请重新进入直播间</string>
     <string name="show_live_detail_try_to_move">滑动换个主播试试看</string>
     <string name="show_broadcast_header">开播建议：</string>
     <string name="show_broadcast_tips">请确保开播环境网络状态良好\n上行带宽>=3M</string>
