--- a/Android/scenes/play_zone/src/main/res/values/strings.xml
+++ b/Android/scenes/play_zone/src/main/res/values/strings.xml
@@ -37,9 +37,10 @@
     <string name="play_zone_living_host_end_content">是否退出游戏？</string>
     <string name="play_zone_living_user_end_content">是否退出游戏？</string>
     <string name="play_zone_living_timeout_title">游戏超时自动退出</string>
-    <string name="play_zone_living_host_timeout">重新体验游戏请返回创建房间</string>
-    <string name="play_zone_living_abnormal_title">主播端异常</string>
-    <string name="play_zone_living_user_timeout">重新体验游戏请返回进入房间</string>
+    <string name="play_zone_living_host_timeout">您已体验超过20分钟，当前房间已过期，请退出重新创建房间</string>
+    <string name="play_zone_living_user_timeout">当前房间已过期，请退出</string>
+    <string name="play_zone_living_destroy_title">游戏结束</string>
+    <string name="play_zone_living_destroy_content">房主已解散房间，请确认离开房间</string>
 
     <string name="play_zone_create_room_failed">创建房间失败，错误：%1s</string>
     <string name="play_zone_join_room_failed">加入房间失败，错误：%1s</string>
