--- a/Android/scenes/play_zone/src/main/res/values/strings.xml
+++ b/Android/scenes/play_zone/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="play_zone_living_host_end_content">是否退出游戏？</string>
     <string name="play_zone_living_user_end_content">是否退出游戏？</string>
     <string name="play_zone_living_timeout_title">游戏超时自动退出</string>
-    <string name="play_zone_living_host_timeout">您已体验超过20分钟，当前房间已过期，请退出重新创建房间</string>
+    <string name="play_zone_living_host_timeout">您已体验超过10分钟，当前房间已过期，请退出重新创建房间</string>
     <string name="play_zone_living_user_timeout">当前房间已过期，请退出</string>
     <string name="play_zone_living_destroy_title">游戏结束</string>
     <string name="play_zone_living_destroy_content">房主已解散房间，请确认离开房间</string>
@@ -45,6 +45,7 @@
     <string name="play_zone_create_room_failed">创建房间失败，错误：%1s</string>
     <string name="play_zone_join_room_failed">加入房间失败，错误：%1s</string>
 
+    <string name="play_zone_system">系统</string>
     <string name="play_zone_room_welcome">欢迎来到声网休闲玩法！房间内严禁色情、赌博或暴力内容。</string>
 
     <string-array name="play_zone_roomName_array">
